[gd_scene load_steps=3 format=3 uid="uid://c3csrng2v8qey"]

[ext_resource type="Script" path="res://scripts/edit.gd" id="1_28p8d"]
[ext_resource type="FontFile" uid="uid://delcm1c1fa0k2" path="res://Assets/fonts/JetBrainsMono-VariableFont_wght.ttf" id="2_0o7af"]

[node name="Edit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28p8d")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 32
text = "Edit Word List"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WordCountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
text = "Words in Dictionary: "
vertical_alignment = 1

[node name="WordCount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
text = "32 Words"
vertical_alignment = 1

[node name="InputBox" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 16
placeholder_text = "Type New Words Here..."

[node name="Add" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
text = "Add"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(0.784314, 0.666667, 0, 1)
theme_override_colors/font_selected_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
select_mode = 1
auto_height = true
same_column_width = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
disabled = true
text = "Delete"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
text = "Cancel & Go Back"

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0o7af")
theme_override_font_sizes/font_size = 28
text = "Apply Changes & Go Back"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Apply" to="." method="_on_apply_pressed"]
